# n-plus-one-fish

./: .gitignore  README.md
4th-place/: CMakeLists.txt  LICENSE  README.md  cls_roi_aggregate.cpp  cls_roi_binarize.cpp  cls_roi_cleanup.cpp  full_pipeline_inference.cpp  inference_cls_roi.cpp  make_submission.cpp  test_videos_list_file.txt
4th-place/0_make_sequence_dataset/: CMakeLists.txt  make_sequence_dataset.cpp  parse_sequence_dataset.cpp
4th-place/0_make_sequence_dataset/artifacts/: sequences_11.txt
4th-place/1_train_sequence_model/: deploy5.prototxt  read_seq_layer.cpp  read_seq_layer.hpp  solver.prototxt  test_images.txt  test_labels.txt  train_images.txt  train_labels.txt  trainval5.prototxt
4th-place/2_make_cls_global_frame_dataset/: CMakeLists.txt  make_global_cls_dataset.cpp
4th-place/2_make_cls_global_frame_dataset/artifacts/: 0_0TmU6uLOCJQDb8Ju_000000.xml  0_0TmU6uLOCJQDb8Ju_000023.xml  test.txt  train.txt
4th-place/3_train_cls_global_frame_model/: annotated_data_layer.cpp  data_transformer.hpp  deploy.prototxt  labelmap_fish.prototxt  solver.prototxt  trainval_adl.prototxt
4th-place/4_make_loc_dataset/: CMakeLists.txt  make_loc_dataset.cpp
4th-place/4_make_loc_dataset/artifacts/: video_list.txt
4th-place/5_train_loc_model/: deploy.prototxt  solver.prototxt  test.prototxt  test_name_size.txt  train.prototxt
4th-place/5_train_loc_model/artifacts/: test_1k.txt  (+1 more)
4th-place/6_make_cls_roi_dataset/: CMakeLists.txt  make_cls_roi_dataset.cpp
4th-place/7_train_cls_roi_model/: deploy_mobilenet_roi.prototxt  deploy_pva_roi.prototxt  deploy_resnet10_roi.prototxt  deploy_roi.prototxt  solver.prototxt  trainval_mobilenet_adl_roi.prototxt  trainval_pva_adl_roi.prototxt  trainval_resnet10_adl_roi.prototxt  trainval_vgg_adl_roi.prototxt
(+267 files in other folders)
